--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <!-- card -->
               <div class="card" style="width: 18rem">
                 <img
-                  src="images/salad_resize.jpg"
+                  src="images/cakes/tiramisu.jpg"
                   class="card-img-top"
                   alt="..."
                 />
@@ -291,6 +291,30 @@
               </div>
               <!-- closed card -->
             </div>
+            <div class="col col-lg-3">
+              <!-- card -->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/cakes/pannacotta.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card -->
+            </div>
+            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">column</div>
             <div class="col col-lg-3">column</div>
             <div class="col col-lg-3">column</div>
             <div class="col col-lg-3">column</div>
