created all cards with images

--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
           </section>
 
           <!-- grid crads recipes -->
-          <div class="row">
+          <div class="row g-4">
             <div class="col col-lg-3">
-              <!-- card -->
+              <!-- card 1-->
               <div class="card" style="width: 18rem">
                 <img
-                  src="images/salad_resize.jpg"
+                  src="images/pasta/bolognese.jpg"
                   class="card-img-top"
-                  alt="..."
+                  alt="Bolognese"
                 />
                 <div class="card-body">
                   <p class="card-text">
@@ -272,15 +272,15 @@
                   </p>
                 </div>
               </div>
-              <!-- closed card -->
+              <!-- closed card 1-->
             </div>
             <div class="col col-lg-3">
-              <!-- card -->
+              <!-- card 2-->
               <div class="card" style="width: 18rem">
                 <img
                   src="images/cakes/tiramisu.jpg"
                   class="card-img-top"
-                  alt="..."
+                  alt="Tiramisu"
                 />
                 <div class="card-body">
                   <p class="card-text">
@@ -289,15 +289,15 @@
                   </p>
                 </div>
               </div>
-              <!-- closed card -->
+              <!-- closed card 2-->
             </div>
             <div class="col col-lg-3">
-              <!-- card -->
+              <!-- card 3-->
               <div class="card" style="width: 18rem">
                 <img
                   src="images/cakes/pannacotta.jpg"
                   class="card-img-top"
-                  alt="..."
+                  alt="Pannacota"
                 />
                 <div class="card-body">
                   <p class="card-text">
@@ -306,21 +306,211 @@
                   </p>
                 </div>
               </div>
-              <!-- closed card -->
+              <!-- closed card 3 -->
             </div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
-            <div class="col col-lg-3">column</div>
+            <div class="col col-lg-3">
+              <!-- card 4-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Pizza/pepperoni.jpg"
+                  class="card-img-top"
+                  alt="Pepperoni Pizza"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 4 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 5-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/fish/shrimp.jpg"
+                  class="card-img-top"
+                  alt="Shrimp"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 5 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 6-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/cakes/chocolatecake.jpg"
+                  class="card-img-top"
+                  alt="Chocolatecake"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 6 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 7-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/salad/greek_.jpg"
+                  class="card-img-top"
+                  alt="Greek Salad"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 7 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 8-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/pasta/lasagna.jpg"
+                  class="card-img-top"
+                  alt="Lasagna"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 8 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 9-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/fish/salmon.jpg"
+                  class="card-img-top"
+                  alt="Salmon"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 9 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 10-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Pizza/hamruccola.jpg"
+                  class="card-img-top"
+                  alt="Ham and Ruccola Pizza"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 10 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 11-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/fish/fishsoup4.jpg"
+                  class="card-img-top"
+                  alt="Fish Soup"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 11 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 12-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/salad/nicosie_.jpg"
+                  class="card-img-top"
+                  alt="Nicosie Salad"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 12 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 13-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/pasta/pesto.jpg"
+                  class="card-img-top"
+                  alt="Pesto Pasta"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 13 -->
+            </div>
+            <div class="col col-lg-3">
+              <!-- card 14-->
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Pizza/margherita.jpg"
+                  class="card-img-top"
+                  alt="Margherita Pizza"
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <!-- closed card 14 -->
+            </div>
+            <div class="col col-lg-3">
+          <!-- card 15->
+          <div class="card" style="width: 18rem">
+            <img
+              src="images/salad/caprese.jpg"
+              class="card-img-top"
+              alt="Caprese Salad"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make
+                up the bulk of the card's content.
+              </p>
+            </div>
           </div>
+          <!-- closed card 15 -->
         </div>
         <!-- close grid crads recipes -->
 
