--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     Dessert
                   </button>
                 </li>
-
+                
               </ul>
             </nav>
           </section>
@@ -269,7 +269,7 @@
           <!-- grid crads recipes -->
         <div class="container">
           <div class="row g-4 justify-content-center">
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Pasta">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Pasta">
               <!-- card 1-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -287,7 +287,7 @@
               </div>
               <!-- closed card 1-->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Dessert">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Dessert">
               <!-- card 2-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -305,7 +305,7 @@
               </div>
               <!-- closed card 2-->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Dessert">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Dessert">
               <!-- card 3-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -323,11 +323,11 @@
               </div>
               <!-- closed card 3 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Pizza">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Pizza">
               <!-- card 4-->
               <div class="card recipe-card mx-auto" >
                 <img
-                  src="images/Pizza/pepperoni.jpg"
+                  src="images/pizza/pepperoni.jpg"
                   class="card-img-top"
                   alt="Pepperoni Pizza"
                 />
@@ -341,7 +341,7 @@
               </div>
               <!-- closed card 4 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Fish">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Fish">
               <!-- card 5-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -359,7 +359,7 @@
               </div>
               <!-- closed card 5 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Dessert">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Dessert">
               <!-- card 6-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -377,7 +377,7 @@
               </div>
               <!-- closed card 6 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Salad">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Salad">
               <!-- card 7-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -395,7 +395,7 @@
               </div>
               <!-- closed card 7 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Pasta">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Pasta">
               <!-- card 8-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -413,7 +413,7 @@
               </div>
               <!-- closed card 8 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Fish">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Fish">
               <!-- card 9-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -431,11 +431,11 @@
               </div>
               <!-- closed card 9 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Pizza">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Pizza">
               <!-- card 10-->
               <div class="card recipe-card mx-auto" >
                 <img
-                  src="images/Pizza/hamruccola.jpg"
+                  src="images/pizza/hamruccola.jpg"
                   class="card-img-top"
                   alt="Ham and Ruccola Pizza"
                 />
@@ -449,7 +449,7 @@
               </div>
               <!-- closed card 10 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Fish">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Fish">
               <!-- card 11-->
               <div class="card recipe-card mx-auto" >
                 <img
@@ -467,7 +467,7 @@
               </div>
               <!-- closed card 11 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Salad">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Salad">
               <!-- card 12-->
               <div class="card recipe-card mx-auto">
                 <img
@@ -485,7 +485,7 @@
               </div>
               <!-- closed card 12 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Pasta">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Pasta">
               <!-- card 13-->
               <div class="card recipe-card mx-auto">
                 <img
@@ -503,11 +503,11 @@
               </div>
               <!-- closed card 13 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Pizza">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Pizza">
               <!-- card 14-->
               <div class="card recipe-card mx-auto" >
                 <img
-                  src="images/Pizza/margherita.jpg"
+                  src="images/pizza/margherita.jpg"
                   class="card-img-top"
                   alt="Margherita Pizza"
                 />
@@ -521,7 +521,7 @@
               </div>
               <!-- closed card 14 -->
             </div>
-            <div class="col col-md-4 col-sm-6 col-lg-3" data-category="Salad">
+            <div class="col-md-4 col-sm-6 col-lg-3" data-category="Salad">
               <!-- card 15 -->
               <div class="card recipe-card mx-auto" >
                 <img
