--- a/index.html
+++ b/index.html
@@ -574,8 +574,11 @@
                   class="form-control"
                   placeholder="Enter your name"
                   required
+                  minlength="4"
+                  maxlength="30"
                  />
-                </div>
+                 <div class="invalid-feedback">Name must be between 4 and 30 characters.</div>
+                </div class="invalid-feedback">
 
                     <!-- Email Field -->
                  <div class="mb-3">
@@ -588,6 +591,7 @@
                     placeholder="Enter your email address"
                    required
                   />
+                  <div class="invalid-feedback">Please enter a valid email address.S</div>
                  </div>
 
                   <!-- Recipe Name -->
@@ -601,13 +605,16 @@
                       id="recipeName"
                       class="form-control"
                       required
+                      minlength="3"
+                      maxlength="20"
                     />
+                    <div class="invalid-feedback">Recipe name must be between 3 and 20 characters.</div>
                   </div>
 
                   <!-- Recipe Type -->
                   <div class="mb-3">
                     <label for="recipeType" class="form-label"
-                      >Food Type</label
+                      >Meal Type</label
                     >
                     <select id="recipeType" name="recipeType" class="form-select" required>
                       <option value="">Choose...</option>
@@ -617,6 +624,7 @@
                       <option value="Salad">Salad</option>
                       <option value="Dessert">Dessert</option>
                     </select>
+                    <div class="invalid-feedback">Please select a food genre.</div>
                   </div>
 
                   <!-- Recipe Description -->
@@ -629,8 +637,13 @@
                       id="recipeDescription"
                       class="form-control"
                       rows="3"
+                      placeholder="Enter a short description of your recipe"
                       required
+                      minlength="10"
                     ></textarea>
+                    <div class="invalid-feedback">
+                      Description must be at least 10 characters long.
+                    </div>
                   </div>
 
                   <!-- Submit Recipe -->
@@ -656,5 +669,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
     <script src="recipeCards.js"></script>
+    <script src="formValidation.js"></script>
   </body>
 </html>
