--- a/index.html
+++ b/index.html
@@ -658,6 +658,73 @@
         <!-- end of Add Recipe Modal -->
       </div>
     </main>
+    
+     <!-- Contact Form -->
+<section id="contact" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <form>
+      <div class="row mb-3">
+        <!-- Name -->
+        <div class="col-md-6">
+          <label for="contactName" class="form-label">Your Name</label>
+          <input
+            type="text"
+            id="contactName"
+            name="contactName"
+            class="form-control"
+            placeholder="Enter your name"
+            required
+          />
+        </div>
+        <!-- Email -->
+        <div class="col-md-6">
+          <label for="contactEmail" class="form-label">Your Email</label>
+          <input
+            type="email"
+            id="contactEmail"
+            name="contactEmail"
+            class="form-control"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
+      </div>
+
+      <!-- Subject -->
+      <div class="mb-3">
+        <label for="contactSubject" class="form-label">Subject</label>
+        <input
+          type="text"
+          id="contactSubject"
+          name="contactSubject"
+          class="form-control"
+          placeholder="Enter the subject"
+          required
+        />
+      </div>
+
+      <!-- Message -->
+      <div class="mb-3">
+        <label for="contactMessage" class="form-label">Your Message</label>
+        <textarea
+          id="contactMessage"
+          name="contactMessage"
+          class="form-control"
+          rows="5"
+          placeholder="Write your message here"
+          required
+        ></textarea>
+      </div>
+
+      <!-- Submit Button -->
+      <div class="text-center">
+        <button type="submit" class="btn btn-warning px-4">Send Message</button>
+      </div>
+    </form>
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="bg-light py-3 text-center">
