added again images to pizza selections

--- a/index.html
+++ b/index.html
@@ -663,7 +663,8 @@
 <section id="contact" class="py-5 bg-light">
   <div class="container">
     <h2 class="text-center mb-4">Contact Us</h2>
-    <form>
+    <form  action="https://formspree.io/f/xjkknevl"
+    method="POST">
       <div class="row mb-3">
         <!-- Name -->
         <div class="col-md-6">
